--- a/HealingBeacon/app/src/main/res/values/strings.xml
+++ b/HealingBeacon/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_beacon_monitor">BeaconMonitorActivity</string>
     <string name="title_activity_patients_in_range">PatientsInRange</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
 </resources>
