--- a/HealingBeacon/app/src/main/res/values/strings.xml
+++ b/HealingBeacon/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_splash_screen">SplashScreen</string>
     <string name="title_activity_laboratory_tests">LaboratoryTestsActivity</string>
     <string name="title_activity_laboratory_tests_results">LaboratoryTestsResults</string>
+    <string name="title_activity_history">HistoryActivity</string>
 
 </resources>
