--- a/HealingBeacon/app/src/main/res/values/strings.xml
+++ b/HealingBeacon/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_laboratory_tests">LaboratoryTestsActivity</string>
     <string name="title_activity_laboratory_tests_results">LaboratoryTestsResults</string>
     <string name="title_activity_history">HistoryActivity</string>
+    <string name="title_activity_notes">NotesActivity</string>
 
 </resources>
